Another day another slay
getStartDate prompt now getDate prompt for added granularity
Use getDate prompt everytime a date is asked (for validation)
Activity Logs now no longer overlap each other
role checks now use instanceof instead of by Role
Mechanic and Salesperson now have own toString methods
Update user info now updates immediately
View User by Role now works